tests/ui/non-exhaustive-invalid.stderr
error: Item can't be FromBits and non_exhaustive

         = help: remove #[non_exhaustive] or derive(FromBits) here

 --> tests/ui/non-exhaustive-invalid.rs:4:10
  |
4 | #[derive(FromBits)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `FromBits` (in Nightly builds, run with -Z macro-backtrace for more info)

error: Item can't be FromBits and non_exhaustive

         = help: remove #[non_exhaustive] or derive(FromBits) here

 --> tests/ui/non-exhaustive-invalid.rs:9:10
  |
9 | #[derive(FromBits)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `FromBits` (in Nightly builds, run with -Z macro-backtrace for more info)

error: Using #[non_exhaustive] on structs is currently not supported

         = help: open an issue on our repository if needed

  --> tests/ui/non-exhaustive-invalid.rs:18:10
   |
18 | #[derive(TryFromBits)]
   |          ^^^^^^^^^^^
   |
   = note: this error originates in the derive macro `TryFromBits` (in Nightly builds, run with -Z macro-backtrace for more info)
